--- a/git/Dockerfile
+++ b/git/Dockerfile
@@ -1,11 +1,12 @@
-FROM centos:latest
-Maintainer bikashgautam9080@gmail.com
-Run yum install -y httpd \
-zip\
- unzip
-ADD https://www.free-css.com/assets/files/free-css-templates/download/page254/photogenic.zip /var/www/html/
-WORKDIR /var/www/html/
-RUN unzip photogenic.zip
-RUN cp -rvf photogenic/*
-CMD ["usr/sbin/httpd", "-D","FOREGROUND"]
-EXPOSE 80 22
+FROM  centos:latest
+ MAINTAINER bikash9089@gmail.com
+ RUN yum install -y httpd \
+  zip\
+  unzip
+  ADD https://www.free-css.com/assets/files/free-css-templates/download/page265/shine.zip /var/www/html/
+ WORKDIR /var/www/html/
+ RUN unzip shine.zip
+ RUN cp -rvf shine/* .
+ RUN rm -rf shine shine.zip
+ CMD ["/usr/sbin/httpd", "-D", "FOREGROUND"]
+ EXPOSE 80
